2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added an Other section in the MD property
	  dialog and moved some options there to avoid too many branches.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/OutputProgressMonitor.cs,
	  MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Show output errors in
	  red.

2007-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Make ILocationListPad
	  implementation work again. GetSelected doesn't work for multi-selection
	  lists.
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Make sure GetNextLocation
	  returns the first row after a compilation. Looks like when the pad is
	  focused, the first row is automatically selected, so we need a flag to
	  ignore that selection if the list has been cleared out.

2007-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.DeleteFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.CodeGenerationPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeFilesDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.ExternalToolPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.LoadSavePanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.FeatureSelectorDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.SelectStylePanelWidget.cs:
	  Updated.
	* MonoDevelop.Ide.Gui/Workbench.cs: In SaveAll, make a copy of the documents
	  list, since it may change.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Registered exception handler in
	  GLib.ExceptionManager.

2007-09-15  Jérémie Laval <jeremie.laval@gmail.com>
 
	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Added Properties property